--- a/views/layout.html
+++ b/views/layout.html
@@ -42,7 +42,7 @@
         </div>
         <footer>
           Made by&nbsp;
-          <a href="https://www.zerocho.com" target="_blank">ZeroCho</a>
+          <a href="https://www.zerocho.com" target="_blank">AI2기</a>
         </footer>
       </div>
       {% block content %}
